--- a/_posts/2022-04-04-INMEDIA-姜牧師-認警署搜身室頭撼警員-事後鼻骨骨折-判監2個月.html
+++ b/_posts/2022-04-04-INMEDIA-姜牧師-認警署搜身室頭撼警員-事後鼻骨骨折-判監2個月.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_13.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>人稱「姜牧師」、Free HK Media 創辦人姜嘉偉今年1月往屯門警署續保期間，被指大鬧警署報案室，並用頭撞傷一名男警，自提堂起還柙至今共10星期。案件因疫情而屢次押後，姜今被解往（4日）於屯門裁判法院應訊，即承認一項襲警罪，案情透露他在事件中亦出現鼻骨骨折。主任裁判官蘇文隆考慮各項因素，以監禁兩個月為量刑起點，由於姜認罪，刑期扣減至2個月。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_13.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>人稱「姜牧師」、Free HK Media 創辦人姜嘉偉今年1月往屯門警署續保期間，被指大鬧警署報案室，並用頭撞傷一名男警，自提堂起還柙至今共10星期。案件因疫情而屢次押後，姜今被解往（4日）於屯門裁判法院應訊，即承認一項襲警罪，案情透露他在事件中亦出現鼻骨骨折。主任裁判官蘇文隆考慮各項因素，以監禁3個月為量刑起點，由於姜認罪，刑期扣減至2個月。</p>
 <p>報稱為記者的「姜牧師」姜嘉偉（現30歲），承認於今年1月17日，在屯門警署一樓報案室內的搜身室襲撃男警員59029羅仲明。</p>
 <p>案情指，當日早上約8時，姜就一宗涉嫌「煽惑他人參與未經批准集結」案件到屯門警署報到，當時他拿著一支燒酒，身上有酒味。由於原訂報到時間應為11點，警員遂要求他在報案室等候，未幾姜脫鞋及睡在椅子上。有警員拍醒姜，姜開始用手機進行Facebook錄影直播，又擺弄玻璃板、阻礙警員接電話，經屢次警告不果，高級女警員57154蔡美詩遂以阻差辦公罪拘捕姜。</p>
 <p>約10時40分，姜被帶往搜身室調查，當警員59029羅仲明用金屬探測器時，姜用前額兩度撞向羅，隨即被制服及以襲警罪拘捕。經驗傷後，證實羅的上唇和前額均有擦傷和觸痛，右膝亦有觸痛。姜則證實鼻骨骨折，鼻骨和左胸壁觸痛。</p>
