Update VOCUS 2022-04-05 patch

--- a/_posts/2022-04-04-VOCUS-光海君的三角形.html
+++ b/_posts/2022-04-04-VOCUS-光海君的三角形.html
@@ -8,4 +8,14 @@ tags: blog
 author: 王臻明
 ---
 
-<p><br></p>
+<p>是說南韓的總統大選已經結束，由立場較為親美的伊錫悅出線，一般認為將會改變之前文在寅總統較為親中的立場，再次扭轉南韓的外交路線。南韓這幾年來一直在親中與親美之間擺盪，這樣的情況其實有其歷史淵源，因為衡諸整個朝鮮半島的發展，一直受到周邊各個強權的影響。畢竟狹長的朝鮮半島本身宛如一座陸橋，連結了大陸與海洋，是重要的戰略要衝。元朝想要攻擊日本時，第一步就是先控制朝鮮半島，以做為前進基地。相同時，當日本的豐臣秀吉計畫要遠征明朝時，也以朝鮮半島為踏板，發動了文祿慶長之役。</p>
+<img src="https://images.vocus.cc/5749fed7-ed37-473f-91f9-12e6f918caaa.jpg"><figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">日軍入侵朝鮮，大軍登陸釜山的畫卷。</figcaption>
+<p>文祿慶長之役在南韓被稱為<a href="https://zh.wikipedia.org/wiki/%E8%90%AC%E6%9B%86%E6%9C%9D%E9%AE%AE%E4%B9%8B%E5%BD%B9">壬辰倭亂</a>，歷時約六年多的時間。朝鮮宣祖李昖在大軍壓境之下，逃離平壤，打算渡過鴨綠江前往遼東，向明朝請求援軍。同時立次子光海君李琿權攝國事，留下來繼續指揮戰事。光海君臨危不亂，堅守不退的表現受到許多肯定，最後也讓他成功登上王位。但光海君在歷史是上個評價極為兩極的君主，因為他執政後，出現很多爭議事件，不止殺害哥哥臨海君李珒，弟弟永昌大君李㼁，在血腥的宮庭政爭中，手段兇狠。最後自己也被罷黜流放，死於濟洲島上。</p>
+<p>光海君如此爭議的一生，當然成為戲劇故事的最愛，南韓推出過許多部關於壬辰倭亂與光海君的歷史劇，許多知名演員都扮演過光海君。不過在這些戲劇中，比較少討論到的是光海君的外交政策，他是朝鮮歷朝歷代中，少數比較不親中的君主。光海君主張畫三角形，甚至更偏向已慢慢崛起的後金，這個由女真人所建立的政權，當時已逐步控制中國東北一帶，緊鄰朝鮮北疆。但光海君的政策，受到多數朝臣的抵制，特別是掌握軍隊的備邊司，更是公然反對光海君，最後還擁立光海君的姪子綾陽君李倧發動政變，史稱「<a href="https://zh.wikipedia.org/wiki/%E4%BB%81%E7%A5%96%E5%8F%8D%E6%AD%A3">仁祖反正</a>」。</p>
+<p>且先不談正朔問題，或叛變即位的綾陽君，重新走回親中的道路，是否真的是撥亂反正。光海君會選擇一條完全不同的道路，其實有很深遠的原因，與他的出身有關。宣祖當時冊立的皇后沒有子嗣，長子臨海君與光海君都是由同一位妃子所生，在立長的傳統下，本應該由臨海君擔任世子，成為朝鮮的儲君。但臨海君素行不良，個性頑劣，難成大器，宣祖非常討厭他，喜歡的是光海君。壬辰倭亂時臨海君被俘，光海君則主持朝政，英勇抗敵，在這樣的情況下，宣祖多次希望立光海君為世子，卻屢屢被明朝打回票，拒絕冊封光海君為世子。</p>
+<p>明朝會做這樣的決定，真正的原因不在朝鮮這一方，而是當時的明神宗也不喜歡長子朱常洛，想立較受寵愛的朱常洵為太子。當時群臣都認為長子朱常洛並沒有犯過大錯，這樣立幼不立長，不只違背祖制，恐怕會招來骨肉相殘之禍。所以朝鮮要求冊立光海君時，明朝許多官員全力阻擋，擔心此例一開，明神宗會藉此要求冊立朱常洵。明朝負責管理這些事務的禮部甚至奏稱「朝鮮稱我外臣，享我正朔，事孰大於繼立，乃舍其長子而請立第二子諱，無乃非我國家之制乎？」講的雖然是朝鮮，勸的其實是明神宗，讓已掌握國政的光海君難以成為世子。</p>
+<p>一直到宣祖去世為止，朝鮮曾多次要求明朝冊封光海君，但都因為相同的理由而未獲同意，光海君自然極為不滿。甚至到宣祖去世後，早就已經掌握大權的光海君，正式即位為朝鮮國王，明朝仍翻著舊帳，不願意立即承認光海君為朝鮮國王的事實。一直要到半年後，才在無可奈何下，派遣使者前往朝鮮。之前被日軍俘虜的臨海君，在朝鮮與日本和談後已被釋放。光海君為避免明朝的使者要求改由臨海君即位，於是在使節團抵達前，就先下手殺了臨海君，並以大量的金銀賄賂使臣，終於順利獲得明朝的冊封。</p>
+<p>光海君在此之後，開始疏遠明朝並與後金連絡，原因不難理解，當然是對明朝心懷怨恨，但女真人越來越強大，已不容忽視，也是客觀的事實。後金在幾年後正式與明朝撕破臉，雙方爆發了薩爾滸之戰。在這場決定性的戰役中，雙方精銳盡出，明朝要求朝鮮出兵助戰，畢竟之前壬辰倭亂時，明朝也曾派軍救援朝鮮。光海君當然持反對的態度，但朝鮮的多數大臣都較為親中，力諫光海君應該報答壬辰倭亂的救援之恩。光海君在孤掌難鳴下，明朝又施加強大的政治壓力，只好被迫同意出兵。</p>
+<p>女真人其實與朝鮮人有千絲萬縷的關係，因地緣因素，兩者的貿易、通婚與各種往來，千年不絕，光海君時代也不例外。後金一知道朝鮮已經同意出兵，立刻寫了一封措詞嚴厲的信，警告朝鮮此舉會惹禍上身，揚言也將攻擊朝鮮。光海君則秘密透過穿梭兩邊的商人，傳送消息給後金，表明自己同意出兵，是無可奈何之舉，但無心幫助明朝軍隊，希望後金能諒解。並在出兵之前，秘密要求帶兵出征的將領姜弘立，到了戰場上要隨機應變，先看誰勝誰敗，再決定要幫哪邊，採取兩面三刀的策略。</p>
+<p>果然朝鮮的部隊不止行進緩慢，在戰場上的動態也極為可疑。這一役明朝軍隊慘敗，朝鮮部隊在明軍潰散後，有超過半數投降，在戰後被送回朝鮮。後金則在大勝之後，持續拉攏朝鮮，希望光海君幫助後金，一起對抗明朝。這時明朝也知道光海君在畫三角形，於薩爾滸之役中未盡力，但明朝在戰敗後，更需要朝鮮的協助，因此也極力拉攏朝鮮，並動用關係來影響朝鮮的大臣們。讓光海君與大臣們為了要繼續支持明朝，還是轉向後金，爆發激烈的政爭，也埋下了朝鮮大臣們決意拉下光海君的遠因，間接造成了後來光海君被罷黜的政變。</p>
+<p>處於強權之間的小國，無可避免會陷入這樣的處境，南韓如此，台灣又何嘗不是如此。嚴格來說，光海君改變過去朝鮮親中的政策，有其私怨，但他的國際局勢判斷是正確的，因為後金不久後將改名為滿洲，並入主中原，光海君如果沒有被拉下台，朝鮮有可能成為大清開國的重要功臣，獲得與蒙古一樣的地位。可惜歷史沒有如果，光海君被罷黜後，朝鮮又走回了親中的道路上，導致後金先後兩次入侵朝鮮，造成極大的破壞。清朝建立後，對於朝鮮也多有防範，採取既攏絡又施壓的兩手策略，這在一定程度上，影響了朝鮮近代的政局走勢。</p>
