--- a/_posts/2022-04-05-INMEDIA-郭嘉諾任臺南市fc教練戰亞協盃-冀將職業足球帶到台灣.html
+++ b/_posts/2022-04-05-INMEDIA-郭嘉諾任臺南市fc教練戰亞協盃-冀將職業足球帶到台灣.html
@@ -12,5 +12,5 @@ author: 獨媒報導
 <p>在亞協盃J組中，除了臺南市FC外，同組還有港超聯東方龍獅、澳門的鄒北記，及上屆殺入跨區決賽的理文和蒙古的220體育會的勝方，該組只有首名球隊可出線淘汰賽，郭嘉諾勢必同室操戈。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5g07z4" title="_DSC4469"><img src="https://live.staticflickr.com/4876/46676652731_c020cbb246_b.jpg" width="1024" alt="_DSC4469" /></a></p>
 <p>外號「風車sir」的郭嘉諾持有亞洲足協專業級教練牌照，以善於鼓勵球員見稱，他曾帶領港隊兩奪省港盃冠軍，今年為他成為教練的第十個年頭。</p>
-<p>郭嘉諾曾先後任教港超聯佳聯元朗、和富大埔及天水圍飛馬等，在2020至2021年的球季後，飛馬欠薪自降丙組，他亦一度無班落；香港職業足球員協會其後為一眾失業球員安排訓練，郭嘉諾出任義務教練。</p>
+<p>郭嘉諾曾先後任教港超聯佳聯元朗、和富大埔及天水圍飛馬等，在2020至2021年的球季後，飛馬欠薪自降丙組，他亦一度無班落；香港職業足球員協會其後為一眾失業球員安排<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E9%83%AD%E5%98%89%E8%AB%BE%E9%A0%98%E6%B8%AF%E8%B6%85%E5%A4%B1%E6%84%8F%E8%BB%8D%E4%BF%9D%E6%8C%81%E8%A8%93%E7%B7%B4-%E5%86%80%E7%90%83%E5%93%A1%E5%BB%B6%E7%BA%8C%E8%81%B7%E6%A5%AD%E5%A4%A2">訓練</a>，郭嘉諾出任義務教練。</p>
 </div></div></div>
