--- a/_posts/2022-04-05-INITIUM-端漫画-乌克兰的线上生活-看俄罗斯新闻的妈妈说-我们很快就会被拯救.html
+++ b/_posts/2022-04-05-INITIUM-端漫画-乌克兰的线上生活-看俄罗斯新闻的妈妈说-我们很快就会被拯救.html
@@ -9,10 +9,10 @@ author: Tetiana Lisna,陈筱涵,黄珮珊
 ---
 
 <p>「被战火和空袭困在室内的乌克兰人，如若生活在一个简版“元宇宙”中。在那里，诈骗与假消息，利用著人们的脆弱与悲痛。」</p><p>特约撰稿人Tetiana Lisna、漫画Stellina CHEN 陈筱涵、漫画编辑黄珮珊 发自乌克兰利维夫、台湾</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220406-international-internet-life-in-ukraine-comic-story/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/7d832b4deace43a8ab9197abcc9fe9c6.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small><strong>【编者按】战争初始就<a href="https://theinitium.com/article/20220306-international-reporter-note-from-kiev-1/">逃离了基辅</a>的乌克兰记者Tetiana Lisna，如今生活在西部的利沃夫（Lviv）。她说，即使在相对安全的乌克兰西部，除了偶尔出门买杂货，大多数乌克兰人都很少出门，实际上，“人们的生活在智能手机上。”<br><br>
+            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small>【编者按】战争初始就<a href="https://theinitium.com/article/20220306-international-reporter-note-from-kiev-1/">逃离了基辅</a>的乌克兰记者Tetiana Lisna，如今生活在西部的利沃夫（Lviv）。她说，即使在相对安全的乌克兰西部，除了偶尔出门买杂货，大多数乌克兰人都很少出门，实际上，“人们的生活在智能手机上。”<br><br>
 战争已经40余日，这个国家绝大多数的经济已经停止，超过一半工作年龄的公民没了工作——有人有预付工资，有人“无薪休假”，有人的公司早就完全没有现金了。但是，幸好，乌克兰手机网络信号好、流量价格还低廉，也是天各一方的人们沟通的唯一渠道。<br><br>
 于是，手机屏幕里的噩耗与挣扎，以及还能联络上的、远方的亲人朋友的点滴交流，构成了Tetiana这些天的生活。<br><br>
-这是端首次尝试漫画形式，带你走进战争中，乌克兰人的线上生活。</strong></small></p>
+这是端首次尝试漫画形式，带你走进战争中，乌克兰人的线上生活。</small></p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220406-international-internet-life-in-ukraine-comic-story/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/93c52b4ea62c48e88c957ac54acb13fb.jpg?imageView2/1/w/1080/h/1526/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
