--- a/_posts/2022-04-06-INITIUM-上海封城纪事-上海模式-以至-上海骄傲-的幻灭-然后呢.html
+++ b/_posts/2022-04-06-INITIUM-上海封城纪事-上海模式-以至-上海骄傲-的幻灭-然后呢.html
@@ -16,7 +16,6 @@ author: 特约撰稿人 文强 发自上海
  
  
  
- 
 
  
  
@@ -60,12 +59,13 @@ author: 特约撰稿人 文强 发自上海
  
  
 
+ 
  
  
  
 <p>
 </p><p>那种惶恐，源于一种首次彻底的、对未来的不可知。活在上海的人，生命中从未发生，日常生活中每个细节，你甚至都不肯定。这是什么样的公元2022年上海大都会生活？</p>
-<p></p><p><small>注：上海在3月27日傍晚宣布，28日凌晨5点开始，以黄埔江为界，两时段分别封控浦东和浦西两大区和周边，期间除了特定工种人群外，所有市民足不出户，名义上未用“封城”字眼，实则是分两期封城。</small></p><p><small>文强，自香港到上海，超过十年沪漂。</small></p><p><a class="image" href="https://theinitium.com/article/20220406-culture-shang-hai-covid-new-wave/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/5ad9f7a4ecad4994b895648f550badd4.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月1日，上海实施全市封锁以阻止 COVID-19 传播，一名员工在家乐福超市打包客户订单。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p></p><p><small>注：上海在3月27日傍晚宣布，28日凌晨5点开始，以黄埔江为界，两时段分别封控浦东和浦西两大区和周边，期间除了特定工种人群外，所有市民足不出户，名义上未用“封城”字眼，实则是分两期封城。</small></p><p><a class="image" href="https://theinitium.com/article/20220406-culture-shang-hai-covid-new-wave/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/5ad9f7a4ecad4994b895648f550badd4.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月1日，上海实施全市封锁以阻止 COVID-19 传播，一名员工在家乐福超市打包客户订单。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年4月1日，上海实施全市封锁以阻止 COVID-19 传播，一名员工在家乐福超市打包客户订单。<span class="credit">摄：Yin Liqin/China News Service via Getty Images</span></figcaption><p></p><p>“上海模式”以至“上海骄傲”的幻灭</p><p>
 </p><p>一度流行的“沪吹”（对上海的吹捧），沦为“沪摧”。疫情带给上海的冲击，可能也远比疾病本身严重，在管治层面，它动摇的是这个城市的自主性与先行力，在民间层面则是普通上海人那自恃的尊严。</p>
 <p></p><p>严峻，不仅是疫情，在许多住在上海的居民眼中（主要指上海本地人和多年居沪人士，亲历了上海之文明与制度洗礼的一批），更像是“上海模式”以至“上海骄傲”的幻灭。</p><p>2600万人的大都会，中国内地城市之中，国际交流最密切，人民生活方式和视野最广阔多元，自命对生活选择更富追求。资源也最不缺，从管理到生活层面，它一度成为全中国先进的模阶，可到现在，它受到全国多方责难，甚至连坚持喝一口咖啡或怎样穿衣都可能被评为矫情。</p><p>一度流行的“沪吹”（对上海的吹捧），沦为“沪摧”。疫情带给上海的冲击，可能也远比疾病本身严重，在管治层面，它动摇的是这个城市的自主性与先行力，在民间层面则是普通上海人那自恃的尊严。民间的反应有些是无奈或调侃的，但更多的质疑导向的，却是真切而深刻的问题：</p><p>怎样可以打破僵化的官僚制度，和不体察民情的冰冷指令，使下游执行回归人性，令“以人为本”再非空洞的宣传而是贯彻的实情。距离疫情结束还远，但上海应该借这次机会想得更远，如果它还能保存它作为中国最先进城市的身份的话。</p><p>可日复一日的现实是，人们先要为基本生存而战，说的是每天的食物。在3月27日晚宣布先封浦东开始，粮食供应就显得紧张，这也是浦东的怨声一直较多的原因，试想象仅一个晚上，人民要涌到超市囤起码一周食品的那种心情。后来当实体菜场不能去之后，大家更要好好把握每天在手机上刷屏抢菜的日常，坊间自有其抢菜攻略，大概列出各个卖货平台的网上开卖时间，每天早上由6点起，就得在自己手机上不断刷，希望能把放置于购物篮中的菜被确认能下单。可由于太多人挤兑，这抢菜是没什么必然把握的，那意味着最终能真正下单的（若幸运地抢到），只是预设中的一小部份。</p><p>而担忧并没随之完结，下了单付了款也不保证就有货，最后还要等外卖骑士们没有差池，没有临时通知你缺货。关于刷手机抢菜，甚至也出现了那不辩真伪的笑话：一直抢刷车牌的“技术团队”（上海车牌摇号竞争激烈，有供应商乘机提出通过后台技术助付费者取得更大抽中机率的服务），现在可转为帮你刷单买菜了。</p><p>时装秀不代表上海众生</p><p>
@@ -83,4 +83,4 @@ author: 特约撰稿人 文强 发自上海
 <p></p><p>大数据剧本下，疫情不会散去？</p><p>一刀切的方案，只能显示权力的绝对性和一时的功效，但全方位的适用性成疑。这和香港的情况可比拟，因为两城基本上原本都具国际视野和关系，人员和管理意识走得更前，是一个例外之城，有条件选择自己的策略。上海此前的防疫举措，也是大量研究过香港的数据，提出过因应这波OMICRON传染性高病危率低的特质，鼓励高龄接种、加快引入mRNA疫苗，留意香港使用口服药和无症状者居家的成效，一度试图寻求另一种抗疫策略。</p><p>只是香港的处境更糟糕，无论是强烈的集举国之力去励行清零，又或者倒向国际或至少是新加坡模式的共存，它都难以实行。前者限于资源与技术，后者限于政治。要知道，清零不只是一个方针，它必须有实际庞大资源的配合，在中国内地而言，这包括了国家动员能力、基层社区执行力、人民纪律性、医疗能力以至大数据病情和出行记录，缺一不可。欠缺此等条件却妄谈清零，同时察看到香港实际上已是高感染但低病危，许多人都能在家隔离自愈，不如切实调整抗疫方针，在再提高接种率前提下，集中医护资源处理重症及其他病因患者，以免催生出次生灾难，同时逐步开放社交距离及国际交通。</p><p><a class="image" href="https://theinitium.com/article/20220406-culture-shang-hai-covid-new-wave/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/8d55958f7bb34bf2bccbb09e9fa28520.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年4月3日，上海第二阶段封城期间，一名送货员在街上骑摩托车送货。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年4月3日，上海第二阶段封城期间，一名送货员在街上骑摩托车送货。<span class="credit">摄：Chen Mingsong/VCG via Getty Images</span></figcaption><p></p><p>回到上海，亲历隔离困境的上海人，在病例居高的情况下，更多务实的意见起码在不少朋友圈中形成主流：也是时候调整抗疫政策：是时候调整抗疫政策。不是被动的躺平不顾，而是在持续低重症及死亡率的情况下，按实际的分层次应付。无症状或轻症者居家隔离，以免出现如现况一样，无症状者在隔离地方生龙活虎，医护人员却疲于奔命的反差。让资源重新调配，那意味可大幅集中重症的资源，以及维护非新冠病以外其他疾病医治资源，不致再出现因人手资源不够而致失救的人道悲剧。</p><p>
 </p><p>中国的数据库已准备好日后无论何时何地，一人一码的全天候管控。那意味着不单是行踪的无所循形，还有出行的YES或NO，都可轻易通过绿黄红去批准或封禁。疫情不会散去，它只是以不同的形态伴随身边。</p>
-<p></p><p>人道悲剧源于过度清零的需求，把人手调到日复日但低效的检测，忽略其他病因病危者的照顾，形成大量次生疾病危机。甚至可以说，这种次生灾害所牺牲的病人，可能都比死于新冠的为多。但在大数据之中，政策的剧本上列写：0才是胜利。个体的每个人，每位1， 再不重要。在社会层面，每个1的问题，如果能清除开，把它关进去非社会的隔离空间，社会表现为0，就是目的。哪怕这逻辑背后有多么的不把每个1视为人。尤如习以为常的对中国发展的描写，都把GDP奉若神明，增多少减多少，人均又多少，其实不反映中国各地差异那么大的具体民生国情。但数据就有这种拟似的客观性，中国复兴的叙事，正建基于这些庞大的数字上。</p><p>疫情远看不到终站，可是这两年多通过疫情的管治，后遗已看到。这将不仅反映在身心与疾病当中，更会一直长存于日后大数据生活的常态化之中。上海已率先指明，出入所有城中场所需出示的场所码会长时期应用，检核身份、扫码、获取通行卡，正式变成生活中必要的一部份。似乎在抗疫的数码化应用普及运动中，中国的数据库已准备好日后无论何时何地，一人一码的全天候管控。那意味着不单是行踪的无所循形，还有出行的YES或NO，都可轻易通过绿黄红去批准或封禁。疫情不会散去，它只是以不同的形态伴随身边。</p>
+<p></p><p>人道悲剧源于过度清零的需求，把人手调到日复日但低效的检测，忽略其他病因病危者的照顾，形成大量次生疾病危机。甚至可以说，这种次生灾害所牺牲的病人，可能都比死于新冠的为多。但在大数据之中，政策的剧本上列写：0才是胜利。个体的每个人，每位1， 再不重要。在社会层面，每个1的问题，如果能清除开，把它关进去非社会的隔离空间，社会表现为0，就是目的。哪怕这逻辑背后有多么的不把每个1视为人。尤如习以为常的对中国发展的描写，都把GDP奉若神明，增多少减多少，人均又多少，其实不反映中国各地差异那么大的具体民生国情。但数据就有这种拟似的客观性，中国复兴的叙事，正建基于这些庞大的数字上。</p><p>疫情远看不到终站，可是这两年多通过疫情的管治，后遗已看到。这将不仅反映在身心与疾病当中，更会一直长存于日后大数据生活的常态化之中。上海已率先指明，出入所有城中场所需出示的场所码会长时期应用，检核身份、扫码、获取通行卡，正式变成生活中必要的一部份。似乎在抗疫的数码化应用普及运动中，中国的数据库已准备好日后无论何时何地，一人一码的全天候管控。那意味着不单是行踪的无所循形，还有出行的YES或NO，都可轻易通过绿黄红去批准或封禁。疫情不会散去，它只是以不同的形态伴随身边。</p><p><small>文强，自香港到上海，超过十年沪漂。</small></p>
