--- a/_posts/2022-04-06-VOCUS-方格子電台-podcast-ep2-俄烏戰爭一個月後的小結心得.html
+++ b/_posts/2022-04-06-VOCUS-方格子電台-podcast-ep2-俄烏戰爭一個月後的小結心得.html
@@ -10,10 +10,8 @@ author: 王立第二戰研所
 
 <div class="draft-block draft--p left">全新一季EP.2已上線</div>
 <div class="draft-block draft--p left">每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://open.firstory.me/story/cl1k8bpnv05lq0h3n6v4e3s28/platforms" target="_blank" class="draft--a">《王立第二戰研所》</a>！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/ab4a0be8-dfdb-404e-b490-892eaca6c127.jpg" data-width="1200" data-height="630" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/ab4a0be8-dfdb-404e-b490-892eaca6c127.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">烏俄戰爭第一階段結束？開戰一個月後小結</div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">點此用喜歡的方式收聽節目▶︎▷<a href="https://open.firstory.me/story/cl1k8bpnv05lq0h3n6v4e3s28/platforms" target="_blank" class="draft--a">《方格子電台-王立第二戰研所》</a></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <blockquote class="draft-block draft--blockquote">本集更新<br>EP2：俄烏戰爭一個月後的小結心得</blockquote>
