--- a/_posts/2022-04-06-INMEDIA-前深水埗配水庫檢討報告-水務署以-水缸-稱呼令古蹟辦誤會.html
+++ b/_posts/2022-04-06-INMEDIA-前深水埗配水庫檢討報告-水務署以-水缸-稱呼令古蹟辦誤會.html
@@ -17,6 +17,6 @@ author: 獨媒報導
 <p>工作小組又指，水務署及古蹟辦在處理事件時，已按技術通告的要求完成諮詢的工作。惟技術通告並沒有就工務部門須向古蹟辦提交資料的種類和細節，訂立明確指引，令水務署向古蹟辦提供了不完整或不合適的資料。</p>
 <p>另外，水務署亦未有向古蹟辦提交另一份可展示前配水庫橫切面及拱形頂部設計的工作圖則，未能反映前配水庫內部的建築特色。</p>
 <p><strong>倡定期舉辦聯合研討會</strong></p>
-<p>工作小組提出2項短期及3項中期措施。短期措施包括修訂技術通告，當工務部門在工程中涉及可能具有文物價值的地下構築物時，諮詢古蹟辦及處理，並在有需要時安排實地考察。</p>
+<p>工作小組提出2項短期及3項中期措施。短期措施包括修訂技術通告，闡述工程代理及古蹟辦處理尚未列入「文物地點」名單而又具潛在文物價值的項目的詳細要求，包括工程代理須向古蹟辦提交的詳細資料，及在有需要時安排實地考察，並應發出指引，當工務部門在工程中涉及可能具有文物價值的地下構築物時，諮詢古蹟辦及處理。</p>
 <p>中期措施則包括定期舉辦聯合研討會，讓古蹟辦及工務部門職員瞭解在文物影響評估機制下的責任及角色；盤點水務署及渠務署所保養的老舊地下構築物，以及透過保育歷史建築基金，研究不屬於尋常類別「建築物／構築物」的項目。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
