--- a/_posts/2022-04-08-INMEDIA-漁護署推格殺令五個月-37次行動殺73隻野豬.html
+++ b/_posts/2022-04-08-INMEDIA-漁護署推格殺令五個月-37次行動殺73隻野豬.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_22.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>漁護署自去年11月中暫停「捕捉、避孕／搬遷先導計劃」，改為對市區黑點出沒的野豬下格殺令，即在獸醫利用麻醉槍捕捉後，用藥物注射作人道處理。按署方提交的資料顯示，至今年2月已進行34次行動，共人道處理66隻野豬。連同漁護署網站資料，截至今年3月18日，行動已增至37次，共人道處理73隻野豬。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_22.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>漁護署自去年11月中暫停「捕捉、避孕／搬遷先導計劃」，改為對市區黑點出沒的野豬下<a href="https://www.inmediahk.net/node/動物/警員被咬傷-漁護署下野豬市區格殺令">格殺令</a>，即在獸醫利用麻醉槍捕捉後，用藥物注射作人道處理。按署方提交的資料顯示，至今年2月已進行34次行動，共人道處理66隻野豬。連同漁護署網站資料，截至今年3月18日，行動已增至37次，共人道處理73隻野豬。</p>
 <p><strong>三次行動撲空  南灣泳灘屢「零收獲」</strong></p>
 <p>多名立法會議員在特別財會審核開支預算作書面查詢，環境局回覆指自去年11月12日實施新措施，至今年2月共進行34次行動，已人道處理66隻野豬，其中以11月17日在南區深灣道的行動最多，佔7隻。在34次行動中，署方曾三度撲空，地點分別為南灣泳灘、南灣泳灘及舂坎角泳灘和南灣泳灘及中灣泳灘。</p>
 <p>漁護署表示在2021至2022年度，即截至今年2月，共接獲1,208宗涉及野豬的投訴或求助個案，較2020至2021年度的1,114宗為多。</p>
