--- a/_posts/2022-04-06-INITIUM-防疫异见者的另一个上海-当躲避政治的城市遭遇防疫政治.html
+++ b/_posts/2022-04-06-INITIUM-防疫异见者的另一个上海-当躲避政治的城市遭遇防疫政治.html
@@ -5,10 +5,10 @@ date: 2022-04-06 22:32:00.000000000 +00:00
 link: https://theinitium.com/article/20220407-mainland-covid-omicron-shanghai-lockdown/
 categories: initium
 tags: blog
-author: 来福
+author: 特约撰稿人苻坚 实习记者陆眉间 郑沐音 发自新加坡
 ---
 
-<p>「“微博热搜是咖啡，博主在转救助消息，朋友圈是抢不到菜……”这种信息的分裂正反映舆论场对上海是一座怎么样的城市的多重解读。」</p><p>端传媒记者来福 实习记者陆眉间 郑沐音 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220407-mainland-covid-omicron-shanghai-lockdown/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/c513bc496ea2401f967b7f47fd4bc2fb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月5日，上海封锁中的住宅区外路边，男长者在街上帮助女长者服用连花清瘟中药。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「“微博热搜是咖啡，博主在转救助消息，朋友圈是抢不到菜……”这种信息的分裂正反映舆论场对上海是一座怎么样的城市的多重解读。」</p><p>特约撰稿人苻坚 实习记者陆眉间 郑沐音 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220407-mainland-covid-omicron-shanghai-lockdown/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/c513bc496ea2401f967b7f47fd4bc2fb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月5日，上海封锁中的住宅区外路边，男长者在街上帮助女长者服用连花清瘟中药。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年4月5日，上海封锁中的住宅区外路边，男长者在街上帮助女长者服用连花清瘟中药。<span class="credit">摄：Aly Song/Reuters/达志影像</span></figcaption></figure><p>3月份中旬，上海推行一系列严厉的防疫措施后，持续出现次生灾难事件。3月23日，上海东方医院护士周盛妮哮喘发作，无法在本院得到救治，最终去世。3月30日，处于封控状态的另一位哮喘病人，因120救护车拒绝救援而身亡。4月4日，上海将阳性儿童和家长分开、单独隔离备受批评后，官方回应，家长阳性才可以陪护儿童，导致有家长为了不分离主动感染病毒。4月6日，上海一位阳性患者的柯基犬被防疫人员打死。多起事件，均引发公众愤慨：“连上海都这样了？”</p>
 <p>在本轮上海疫情中，有关上海应该是一座什么样的城市的讨论，甚至超越了对每日新增病例数的关注。上海“精准防疫”策略是否失败，上海还有没有可能试点“共存”，和上海封城中展现出的粗暴和“不文明”，成为疫情舆论的核心。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220407-mainland-covid-omicron-shanghai-lockdown/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/cde1d06dd4b84f9aa7a032540f1448fe.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年4月5日，上海封城期间，政府为市民提供物资，工人在一条街道上卸下和搬运物资。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
