--- a/_posts/2022-04-08-INMEDIA-理大圍城-臨近開審律政司申合併案件-官拒批-對辯方造成不便.html
+++ b/_posts/2022-04-08-INMEDIA-理大圍城-臨近開審律政司申合併案件-官拒批-對辯方造成不便.html
@@ -11,7 +11,7 @@ author: 獨媒報導
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_23.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年11月市民發起行動「營救」被困理大校園的人士，衝突蔓延至油麻地、佐敦、尖沙咀一帶，共有213人於油麻地遭圍捕，分成多案起訴暴動罪，分別排期至今明兩年開審。律政司早前突向法庭申請將4宗分別涉9至11人的案件，合併成2宗分別涉20至21人的案件作審訊，法官高勁修今（8日）於區域法院（移師西九龍法院）拒絕此兩項合併申請。</p>
 <p>法官高勁修考慮雙方陳詞後，指案件將分別於5、6、7和8月開審，若果合併，必定會影響原訂的審期，有大律師甚至未能遷就日程，將不能代表當事人，以致法援署需委派新的大律師，惟他們未必有足夠時間熟習案件。此外被告人數將增加一倍，證據亦隨之增加，高官考慮合併案件將會對辯方律師團隊造成不相稱的不便，控方的申請理由不充份，最終拒絕批准合併。</p>
 <p>法庭今分別於上午和下午處理兩項律政司的合併申請，共涉及四宗案件。</p>
-<p>上午的聆訊中，律政司申請將DCCC751/2020及DCCC461/2021合併。</p>
+<p>上午的聆訊中，律政司申請將 DCCC751/2020 及 DCCC461/2021 合併。</p>
 <p>首案9名被告為：陳子謙（24歲）、陳彥宏（17歲）、張穎瑜（19歲）、朱國智（27歲）、朱盛軒（25歲）、杜文曉（17歲）、高天祐（18歲）、郭曉泰（31歲）及林鳳芝（18歲），將於2022年6月6日至7月11日審訊，預計需時25日。</p>
 <p>次案11名被告為：歐陽浩明（25歲）、翟柏龍（28歲）、湛沛林（19歲）、陳思進（18歲）、陳子宏（21歲）、鄭太君（25歲）、莊正（28歲）、周嘉慧（19歲）、周諾澄（19歲）、簡澧然（24歲）及黎子欣（22歲），將於2022年5月26日至6月30日審訊，預計需時25日。</p>
 <p>下午的聆訊中，律政司申請將DCCC747/2020及DCCC766/2020合併。</p>
