--- a/_posts/2022-04-08-INMEDIA-名校九華畢業李家超-校刊訪問曾稱人命較捉賊緊要.html
+++ b/_posts/2022-04-08-INMEDIA-名校九華畢業李家超-校刊訪問曾稱人命較捉賊緊要.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/g546t7" title="無標題"><img src="https://live.staticflickr.com/65535/51989187462_5168f81235_b.jpg" alt="無標題" /></a></p>
 <p><strong>九華天文學會創會會長  稱學會取捨的哲學</strong></p>
 <p>李家超昨午見記者時表示，便感謝香港及市民給予機會服務，又稱「將會秉承住呢個熱誠，跟住行我將會行嘅道路」。該本記念冊中便指，李家超在中六時參加頗多課外活動，並為九華的天文學會創會會長，他表示由於會長要做的事情特別多，要作的決定亦特別多，包括放棄課堂主持活動，或放棄活動保持學業成績，遂學會了取捨的哲學。</p>
-<p>雖然警察出身，該本紀念冊便透露了李家超的一件鮮為人知的事。李家超指出，一名九華的一位愛騎電單車回校的神父，曾帶學生包括自己，到一些三山五嶽的地方，讓學生認識黑暗的一面，避免誤入歧途。</p>
+<p>雖然警察出身，該本紀念冊便透露了李家超的一件鮮為人知的事。李家超指出，一名九華、愛騎電單車回校的神父，曾帶學生包括自己，到一些三山五嶽的地方，讓學生認識黑暗的一面，避免誤入歧途。</p>
 <p><strong>英文作文功課用艱澀深字  遭神父潑冷水</strong></p>
 <p>此外，李家超在讀書時曾為了做好一份英文作文功課，不惜查閱多本字典，並用了很多艱澀及不常用的深字，但卻遭已故及時任的英文老師魏志立神父潑冷水。</p>
 <p>文中指魏志立神父在批改時，以「This is not good English, but English of a foreigner」，李家超稱當時即如夢初醒，從此不再用浮誇的修飾，並變得實事求是，至今仍會用這件事警惕自己，並感謝魏志立神父的當頭棒喝。</p>
