--- a/_posts/2022-04-08-INMEDIA-近半人不知立法會討論強積金對沖-學者質疑-究竟議員做緊咩.html
+++ b/_posts/2022-04-08-INMEDIA-近半人不知立法會討論強積金對沖-學者質疑-究竟議員做緊咩.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/040811111.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>強積金對沖是特首林鄭2017年上台時的承諾，到了她任期即將完結，條例草案才出爐。香港民意研究所公布，雖然近六成人支持強積金對沖，但近半市民不知道立法會正在審議該條例草案。學者分析市民對立法會關注度低，缺乏民主派監察的議會，政策討論程度低，連建制支持者也有四成人不知情。政府換屆在即，學者對來屆班子推動勞工政策不樂觀。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/040811111.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>強積金對沖是特首林鄭月娥2017年上台時的承諾，到了她任期即將完結，條例草案才出爐。香港民意研究所公布，雖然近六成人支持強積金對沖，但近半市民不知道立法會正在審議該條例草案。學者分析市民對立法會關注度低，缺乏民主派監察的議會，政策討論程度低，連建制支持者也有四成人不知情。政府換屆在即，學者對來屆班子推動勞工政策不樂觀。</p>
 <p>調查於4月1日至4月6日進行，訪問了4,382名12或歲以上的香港市民。結果顯示，57%受訪者支持取消強積金對沖機制，23%市民反對。有48%市民不知立法會正在審議取消對沖安排條例草案，不知情的市民當中，有六成是民主派支持者，非民主派支持者則佔四成。</p>
 <p>有關條例草案技術細節，57%受訪者支持條例加入追溯期，令條例生效前的僱主供款亦不得用作對沖，16%受訪者表示不支持。</p>
 <p>香港民研副行政總裁鍾劍華坦言對調查結果感意外，因為市民對立法會工作的關注度低。他指政府計劃動用332億元配合政策，卻缺乏宣傳。明愛專上學院社會科學學系講師龔偉森表示調查結果反映政策討論度低，主因是立法會內沒有民主派議員監察，議會解說政策功能下降，政府推政策時或不需理會市民觀感，「公民社會被瓦解得體無完膚」。</p>
