--- a/_posts/2022-04-09-INMEDIA-個案跌至三位數將取消記者會-林鄭-我希望早啲喺呢個場合消失.html
+++ b/_posts/2022-04-09-INMEDIA-個案跌至三位數將取消記者會-林鄭-我希望早啲喺呢個場合消失.html
@@ -11,6 +11,7 @@ author: 獨媒報導
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/13_12.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 確診數字過去兩星期持續下跌，曾稱戰勝疫情便會取消每早十一時記者會的行政長官林鄭月娥，今日設下具體指標，表示如果每日確診數字下降至三位數，意味疫情受控，抗疫記者會將會結束，她表示「恐怕大家都好悶」，而每日關於抗疫的問題都不多，「我希望早啲喺呢個場合消失啦」。</p>
 <p>上月9日開始，林鄭月娥除了星期二因為需舉行行政會議外，每日早上11時皆主持抗疫記者會。不過抗疫內容往往非記者關注重點，每天皆有不少疫情以外的問題追問林鄭，例如早前她被頻密追問會否參選、如何看待李家超參選等。</p>
 <p>在舉行記者會剛滿一個月的今日，林鄭表示如果疫情受控至每日確診數字跌穿不足一千宗，便會將每日例行記者會取消。她指「我仍然好樂意見大家，去談各方面問題，但恐怕大家都好悶喇，亦都唔係好多嘢問，關於抗疫」，她又說「我希望早啲喺呢個場合消失啦，即係話香港疫情已經受到控制」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/48YrPS" title="1211206"><img src="https://live.staticflickr.com/65535/51992574640_9dd8faa0a7_b.jpg" width="1024" alt="1211206" /></a></p>
 <p>林鄭在首日記者會時，曾被追問為何親自督師主持記者會，她當時回應指自己是「抗疫主帥」，相信市民希望知道抗疫「戰情」如何。她又指愈早戰勝疫情，記者會愈快取消，「相信大家唔想成日見到我㗎喇，早啲見唔到我呢，即係話香港已經回復返正常生活。」</p>
 <p><strong>預告今日快測陽性稍回升</strong></p>
 <p>政府呼籲市民昨日起一連三日進行快速抗原測試，並自願在網上系統呈報。林鄭在記者會表示，從稍後衞生防護中心公布的數字可得知，昨天快測呈報陽性個案有所上升，但並非上萬宗的升幅，仍在當局能應對的範圍內。林鄭表示反映自願快測有成效，有信心在復活節假期後按原定計劃，分三佪月分階段放寬社交距離措施，以及讓學校恢復面授。</p>
