--- a/_posts/2022-04-09-INMEDIA-涉以折扣價現金套現消費券-警拘三男子.html
+++ b/_posts/2022-04-09-INMEDIA-涉以折扣價現金套現消費券-警拘三男子.html
@@ -11,7 +11,8 @@ author: 獨媒報導
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/19_1.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>警方昨日拘捕三名男子，涉嫌干犯欺詐罪，他們被指使用折扣價錢以現金套現消費券。警方表明，正追查其他曾參與套現的人士。</p>
 <p>三名男子年齡介乎33至45歲，職業報稱為店舖東主及售貨員，正被扣留調查。警方表示，留意到網上有人在社交平台登廣告，商約市民到指定地點或實體商舖，並提供店舖付款碼，以不同價錢兌換消費券，利用差價謀利。</p>
 <p>財富調查及情報科、西九龍重案組在調查後作出拘捕，派出探員喬裝成有興趣兌換消費券的市民，昨日在旺角、深水埗及將軍澳拘捕該三名男子。警方指三名男子早前曾「成功交易」，折扣價約為八至九折。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/M0Fz36" title="螢幕截圖 2022-04-09 下午3.40.00"><img src="https://live.staticflickr.com/65535/51992387525_fff2d997b5_b.jpg" alt="螢幕截圖 2022-04-09 下午3.40.00" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/T9K0wP" title="PHOTO-2022-04-09-12-29-40"><img src="https://live.staticflickr.com/65535/51992665954_4958fbaa0a_b.jpg" alt="PHOTO-2022-04-09-12-29-40" /></a></p>
 <p>警方表示會和支付平台聯絡，必要時會凍結可疑帳戶及列入黑名單。西九龍總區署理總督察林子鎌重申，消費券只可用作零售、餐飲和服務業商戶的實體及網上店舖，不能兌換現金或其他受禁用途。</p>
 <p>財富調查組署理總督察戴焯賢則強調，消費券不可用作套現等用途，警告市民如聯同商戶製造不法及虛假交易記錄，即屬合謀套現消費券，有可能已干犯串謀欺詐罪。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2f5089" title="126A9708"><img src="https://live.staticflickr.com/65535/51992391976_6f664ac76e_b.jpg" width="1024" alt="126A9708" /></a></p>
 </div></div></div>
