--- a/_posts/2022-04-09-INMEDIA-歐盟主席到訪基輔-承諾特快處理烏克蘭加入申請.html
+++ b/_posts/2022-04-09-INMEDIA-歐盟主席到訪基輔-承諾特快處理烏克蘭加入申請.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/28.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>俄羅期入侵烏克蘭踏入個半月，俄軍逐漸撤離烏國北部，轉移進攻東部城市哈爾科夫（Kharkiv）及頓涅茨克（Donetsk）。烏克蘭加入歐盟事態有新進展，歐盟執委會主席馮德萊恩在當地時間8日，與總統澤連斯基在首都基輔會面。馮德萊恩承諾加快處理烏國加入歐盟的申請，過往申請程序普遍須以數年完成，但烏克蘭或僅須數星期便可加入。澤連斯基表示，將在一星期內回覆歐盟的問卷。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/28.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>俄羅斯入侵烏克蘭踏入個半月，俄軍逐漸撤離烏國北部，轉移進攻東部城市哈爾科夫（Kharkiv）及頓涅茨克（Donetsk）。烏克蘭加入歐盟事態有新進展，歐盟執委會主席馮德萊恩在當地時間8日，與總統澤連斯基在首都基輔會面。馮德萊恩承諾加快處理烏國加入歐盟的申請，過往申請程序普遍須以數年完成，但烏克蘭或僅須數星期便可加入。澤連斯基表示，將在一星期內回覆歐盟的問卷。</p>
 <p><strong>馮德萊恩形容俄軍在布查鎮行為「泯滅人性」</strong></p>
 <p>馮德萊恩是俄烏戰事展開後，到訪當地最高級的歐洲官員。她在歐盟外交與安全政策高級代表波瑞爾（Josep Borrell）和斯洛伐克總理黑格爾德（Eduard Heger）陪同下，<a href="https://twitter.com/vonderleyen/status/1512453309185114122?cxt=HHwWlIC-la-RqP0pAAAA">到烏國首都基輔和遭俄軍血洗的布查鎮（Bucha）視察</a>，形容俄軍行為「泯滅人性」（In Bucha our humanity was shattered），稱「如果這不是戰爭罪行，什麼才是？」（if this is not a war crime, what is a war crime?）表示犯下暴行的人終須面臨審判（Those responsible for the atrocities will be brought to justice ）。</p>
 <p>馮德萊恩隨後與烏克蘭總統澤連斯基在首都基輔會面，歐盟日前加強對俄羅斯制裁，名單包括俄羅斯總統普京的兩名女兒，她們被禁入境歐盟，在歐盟區內的資產亦被凍結。她表示，歐盟已準備向俄羅斯作新一輪制裁，以回應俄軍的軍事行動。</p>
@@ -18,5 +18,5 @@ author: 獨媒報導
 ＊烏克蘭政府宣布，因克拉馬托爾斯克的火車站受導彈襲擊，南部城市敖德薩（Odesa）實施宵禁，由當地時間星期六黃昏至星期一黃昏，市民將不得外出及聚集。<br />
 ＊烏國東部盧甘斯克州（Luhansk）州長蓋戴（Serhiy Gaidai）稱，俄方炮擊近日漸變頻密，且更多俄軍抵達當地，需要撤離更多居民。<br />
 ＊烏克蘭國防部預料，俄羅斯空軍將集中火力於烏國東部及南部，包括頓巴斯（Dobus）及Mariupol（馬里烏波爾）。<br />
-＊俄羅斯國馬杜馬的Youtube頻道被封鎖，俄方官員警告或反制Youtuebe</p>
+＊俄羅斯國馬杜馬的Youtube頻道被封鎖，俄方官員警告或反制YouTube</p>
 </div></div></div>
