--- a/_posts/2022-04-08-INITIUM-异乡人-在自己的母语里流浪-我在加拿大学编剧.html
+++ b/_posts/2022-04-08-INITIUM-异乡人-在自己的母语里流浪-我在加拿大学编剧.html
@@ -9,32 +9,12 @@ author: 特约撰稿人 王丹阳 发自加拿大
 ---
 
 <p>「地理位置的变化不会让我脱离那熟悉的衰世感；这里有我的文化，我的语言，我借以认知的一切，连起来就是我的命运。」</p><p>特约撰稿人 王丹阳 发自加拿大</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220409-strangers-study-screenwriting-in-canada/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/483d260595084cd298d5dcac4582c461.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit">插画：Wilson Tsang</span></figcaption></figure><p><strong>“异乡人”每月一期，由身在世界各地的端传媒编辑轮班主持，为读者带来生活在别处的故事，欢迎<a href="https://theinitium.com/channel/stranger/">点击订阅</a>。我是本周的值班编辑周末，今天这篇讲述了一个文字工作者尝试在母体之外写母体里的故事，由此遇到的种种不适和思索。</strong></p>
+            <figcaption itemprop="caption"><span class="credit">插画：Wilson Tsang</span></figcaption></figure><p><small>【編者按】“异乡人”每月一期，由身在世界各地的端传媒编辑轮班主持，为读者带来生活在别处的故事，欢迎<a href="https://theinitium.com/channel/stranger/">点击订阅</a>。我是本周的值班编辑周末，今天这篇讲述了一个文字工作者尝试在母体之外写母体里的故事，由此遇到的种种不适和思索。</small></p>
 <h3>1</h3>
 <p>这是我在温哥华一所电影学校学习编剧的第六个月，为什么会置身这里，是因2019年时的一个决定。在2019年之前的很长一段年月里，中国的影视业市值处在其他国家望尘莫及的天梯之上，是一座实实在在的天上掉下来的金矿，版权、IP、投资、众筹⋯⋯人人都能被它砸中。而我因做了十多年记者，又是深度调查又是非虚构写作的，使我相信影视改编也是我的路。</p>
 <p>这份热情在去年8月终于落定，我跻身留学生的千米长龙，登上上海出发，香港转机，到温哥华的航班。</p>
 <p>第一天开学典礼的时候，是我14天隔离的最后一天，我在zoom上连线，30来个学生，没有一张东亚面孔。老师要每个人自我介绍时说一部最爱的电影和最爱的TV show。 电影我还没问题，至于TV show，我开始发怵。</p>
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-
- 
+<p>怪就怪我没有听懂任何一个人嘴里吐出的片名，不然我不会琢磨它是不是就是电视上如奥普拉脱口秀、或星期六夜现场之类的⋯⋯</p>
  
  
  
@@ -52,12 +32,17 @@ author: 特约撰稿人 王丹阳 发自加拿大
  
  
  
+ 
 
  
  
  
  
  
+ 
+ 
+ 
+
  
  
  
@@ -82,7 +67,22 @@ author: 特约撰稿人 王丹阳 发自加拿大
  
  
  
-<p>怪就怪我没有听懂任何一个人嘴里吐出的片名，不然我不会琢磨它是不是就是电视上如奥普拉脱口秀、或星期六夜现场之类的⋯⋯</p><p>我是这样回答的，“我第一份工作就在电视台，我知道电视节目是怎么制作的，所以not very much into TV shows（不大喜欢看电视剧）.”如果当时我的同学和老师在仔细听，他们一定会把我惊为外星人：这个人居然对我们像食堂一样家常便饭的Netflix, HBO, Apple TV, Disney+形同陌路。</p><p>从有线电视肥皂剧一路以降到流媒体剧，他们统称为TV Show，这是我才知道的。之后，吃尽了中文转译之苦，在原片名的烟海里浮沈，永远不知道哪一天能上岸，能把这些英文名字和它的中文转译利索地对应上。</p><p>在中国的时候，我知道中文的美，却不曾把它神话。出了国，中文像一种唾液分泌里的物质，这种物质的化学分子方程无限延展，浩如宇宙，渺如微尘。方块字之间的勾勾连连，有着魔术变幻间的肌理， 有些人用一个流行的词叫“褶皱”，我想是怎么玄乎怎么说，中文就是有很多褶皱。</p><p>我一时咀嚼不出英语的精妙，但是它和母语之间的系统差之千里，已经很清楚地摆在眼前。就如Inception这个电影, 台译《全面启动》，港译《潜行凶间》，如果你来自中国大陆，你也许以为自己没看过， 但它叫《盗梦空间》，你没看过也听过。中文里的毛细血管真是可以覆盖宇宙。</p><p>第一个星期，我遇到短剧课。英国来的女老师给了一份炸弹般的见面礼，她叫十多个人的小组，从1到12报自己最爱的电影，看这部电影时的情境，及最爱的理由。但游戏规则是这样的，每报自己的时候，要把前面所有人的全套都复述一遍，越到后面，越是超负荷。</p><p>我记得那节尴尬的课上，我没有记住任何一个人报过的电影，也许不是我没看过，而是我不知道它是什么。</p><p><a class="image" href="https://theinitium.com/article/20220409-strangers-study-screenwriting-in-canada/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/9c0063e46dd9493cbed0aeb8ece1ad72.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="美国加利福尼亚州圣地亚哥，由设计师Otto Dieffenbach驾驶的无线电遥控超人在一次试飞中。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>我是这样回答的，“我第一份工作就在电视台，我知道电视节目是怎么制作的，所以not very much into TV shows（不大喜欢看电视剧）.”如果当时我的同学和老师在仔细听，他们一定会把我惊为外星人：这个人居然对我们像食堂一样家常便饭的Netflix, HBO, Apple TV, Disney+形同陌路。</p><p>从有线电视肥皂剧一路以降到流媒体剧，他们统称为TV Show，这是我才知道的。之后，吃尽了中文转译之苦，在原片名的烟海里浮沈，永远不知道哪一天能上岸，能把这些英文名字和它的中文转译利索地对应上。</p><p>在中国的时候，我知道中文的美，却不曾把它神话。出了国，中文像一种唾液分泌里的物质，这种物质的化学分子方程无限延展，浩如宇宙，渺如微尘。方块字之间的勾勾连连，有着魔术变幻间的肌理， 有些人用一个流行的词叫“褶皱”，我想是怎么玄乎怎么说，中文就是有很多褶皱。</p><p>我一时咀嚼不出英语的精妙，但是它和母语之间的系统差之千里，已经很清楚地摆在眼前。就如Inception这个电影, 台译《全面启动》，港译《潜行凶间》，如果你来自中国大陆，你也许以为自己没看过， 但它叫《盗梦空间》，你没看过也听过。中文里的毛细血管真是可以覆盖宇宙。</p><p>第一个星期，我遇到短剧课。英国来的女老师给了一份炸弹般的见面礼，她叫十多个人的小组，从1到12报自己最爱的电影，看这部电影时的情境，及最爱的理由。但游戏规则是这样的，每报自己的时候，要把前面所有人的全套都复述一遍，越到后面，越是超负荷。</p><p>我记得那节尴尬的课上，我没有记住任何一个人报过的电影，也许不是我没看过，而是我不知道它是什么。</p><p><a class="image" href="https://theinitium.com/article/20220409-strangers-study-screenwriting-in-canada/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/9c0063e46dd9493cbed0aeb8ece1ad72.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="美国加利福尼亚州圣地亚哥，由设计师Otto Dieffenbach驾驶的无线电遥控超人在一次试飞中。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">美国加利福尼亚州圣地亚哥，由设计师Otto Dieffenbach驾驶的无线电遥控超人在一次试飞中。<span class="credit">摄：Mike Blake/Reuters/达志影像</span></figcaption><p></p><p>2</p><p>每次与一代代的超人、蜘蛛侠、僵尸和吸血鬼狭路相逢的时刻，我就像遇到从西方文化里走出来的我本看不上的虾兵蟹将，被他们挟持在门外，我自己也不愿跨过这个门槛去共鸣。</p><p>西方的90后，就是被这些漫威英雄的奶喂大的，那些短兵相接的多巴胺、平行宇宙的幻觉、形影不离的英雄情缘，塑造了和我完全不一样的生命。那些已成历史的老料，和正在形成系列的新料，他们时时聊，天天聊，而奈飞这样的流媒体平台又已成好莱坞之外的新的大水漫灌，不断灌注着娱乐至死的丧尸式的精神氛围。</p><p>一开始，每一堂课上布置写作作业，那些满头银发的老师都要强调一遍：谢绝sci-fi（科幻）。后来我才懂得，这种提醒是有必要的。在这个90%以上看过《星球大战》、万圣节把漫威服装穿在身上争奇斗艳的班级，这些老师时常挥舞着悬崖勒马的缰绳。</p><p>可是，千万不要认为西方年轻人是他们表面上的这般肤浅。他们并不肤浅，只是他们不拒绝那些精神鸦片罢了。不少人都致力于把自己活成行走的百科全书， 现代文明之于欧美人来说，处于闸口全开的泄洪时代，他们泡在它的蓄水池里面长大，可以在任何一道闸口上取一瓢饮。</p><p>元旦新年之后，美国人M煞有介事地问我：中国农历新年过了没？他有着“JOKER”里的菲尼克斯（Joaquin Phoenix）那样的木讷又如炬的目光。他说他属猴子，不能和老虎共处，所以今年会非常艰难。我感到他可能是指一种相当于“六冲”的说法（<small>六冲是十二地支的一种关系。 地支之间两两阴阳属性相同，所代表的方向相反而藏干又相克，所以为冲。六冲具体指子午相冲、丑未相冲、寅申相冲、卯酉相冲、辰戌相冲、巳亥相冲</small>），惊讶地问他哪里道听途说的，他自豪地欢呼，“I know it from Chinese Zodiac（我从中国十二生肖中知道的）.”我劝道不要被中国老一辈人的迷信所忽悠， 不想在农历年的第一周，他中招Omicron，于是头一次露出萎靡不振的状态，在zoom上跟我说，“你看，这才农历年的第一个周末，我跟你说过，你不信！ ”</p><p>就这么个无厘头的人，在上学期的Secret Santa游戏上换来了一本超人连环画《Jesus VS Superman》，缩在角落里边啃边痴笑，但耳朵还没闲着，对课上说到的一些陌生的历史上的名字做出梦呓般的应激反应。</p><p>我偶尔瞄一眼那本连环画里是什么颜如玉和黄金屋，只见是一幅90年代末闲书租赁小店里那种勾勒得极其寥落的粗线条画风，超人降落在上帝的怀里，被天上的父治疗着伤口。比他的痴迷更叫我不能理解的，是为何有人会花约150块人民币买一本这样的书做圣诞厚礼。</p><p>我的中国朋友说，中国人真的是苦大仇深啊，看什么都不有趣，精神满足的门槛太高！我想是的，一种代代流传的弱族的集体无意识在血液里流淌，所以无法对西方人那种基于无边的自由之上的无厘头有共鸣。</p><p><a class="image" href="https://theinitium.com/article/20220409-strangers-study-screenwriting-in-canada/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/facaf44b6fa246d2a71c98fef60227ef.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年1月1日，加拿大魁北克省蒙特利尔的唐人街。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年1月1日，加拿大魁北克省蒙特利尔的唐人街。<span class="credit">摄：Graham Hughes/Bloomberg via Getty Images</span></figcaption><p></p><p>3</p><p>对喜剧的反应正是测试文化差异的极好的试剂，毫不夸张地说，我们十来个人的小组，每人把自己的喜剧剧本在课上念一圈，我最尴尬的是，要在满桌哄堂大笑之下也配合地笑出来。</p><p>幽默是放之四海而皆准的吗？从来就不是，但放在今天这般碎成渣的人类共识之下，在经济、政治、舆论、网络等等的乱絮之下，我的Z世代同学在写些什么：有主动要求被戴绿帽子的男主人，与绑匪调情的社交媒体女博主，陌生LGBT群体的即兴派对，还有那已是陈词滥调的速配和一夜情......</p><p>我只是觉得，那种生命的情态，情绪的恣肆离我太远，那些夸张到有意为之的越轨、逾矩、奔放，叫我感到烂俗多于幽默。但无可否认，西方文化在今天也在悬崖上打架，处处是叫人无法承受的轻佻，仿佛世界末日的前一天，狂欢取代了一切意义。</p><p>每次我问“What's the point of it（它的意义何在）”，这个问题无不例外地会问倒写它的人，我像是来大煞风景、终结话题的。更有时候，我会从一些段子里研究出一些高深的端倪，让老师合手赞叹，仿佛我不说，她就看不出来似的。所以我在她眼里，似乎是可以从外部视角点铁成金的一种意见类型。</p><p>我们看任何事物不是就是从追问意义开始的吗？这是中国式教育在我思维土壤里种下的逻辑原点，读书本就是中国改革开放后一代又一代的人生应有之义，书里的一切无不教会我寻找意义。</p><p>但当你发现西方人那种意义感稀薄的普遍精神状况之后，不得不反观自己这个族类是不是一直活得太累。 但又何以解释，在那种随意、闲散、不自缚的精神之下，他们的飞机和卫星为什么照样升天得比多数社会主义国家要快？我无法回答，正如我无法回答为何一个人口三千万的国家能称其为福利国家，而一个人口是其几十倍的国家却注定有人要挨饿。</p><p><a class="image" href="https://theinitium.com/article/20220409-strangers-study-screenwriting-in-canada/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/ebc575f4e9d44affb60dc263b24e6c01.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="加拿大温哥华的一所大学，一名学生在雪中前往上课。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">加拿大温哥华的一所大学，一名学生在雪中前往上课。<span class="credit">摄：Andy Clark/Reuters/达志影像</span></figcaption><p></p><p>4</p><p>像Absurd Comedy这种故事类型（Genre），闹出笑话可能反而是我。正处于青春期肥胖的女同学K写了一个荒诞剧故事大纲，一个富家女不务正业，跟着一个算塔罗牌的精神导师不可自拔，有一天他的师姐们突然说她屁股太小穿衣不好看，她就一根筋地想要个大屁股。</p><p>当她刚要开始筹钱做臀部手术，她的塔罗导师无端端去世了，托梦把事业传给她， 于是她就一边赚手术钱，一边继承事业，冲破来自父母的重重阻力⋯⋯我不知道为什么一个写作者要为人生第一个长剧本找这么一个无厘头、无中生有之事。她改到第二稿时，我评论道这要比第一稿的逻辑通顺多了。那位满头白发的老教授亢奋说道：come on, 原来你还在期待一个荒诞剧拥有逻辑！</p><p>有一半以上的人编人生第一个长剧本时，会写一个初恋的故事，而这个故事最常见的阻力仍旧来自父母，多数是门不当户不对，或者成长的过程中那些自己身上的咬噬性的烦恼。女孩子都梦想成为阿黛尔或者泰勒·斯威夫特，男孩子不是有个奥林匹克梦，就是或想子承父业，或想摆脱父控。</p><p>即使看起来那么地家常便饭，在写作的具体过程中，照样有不少人找不到北。有人在形容自己的剧本时，发一个羊头马尾的怪物图，引起不少共鸣，有人说自己正在加工shit的过程中，而对需要围绕一个臀部手术写100页的K来说，表示从一开始她就知道她的屎正在被诅咒了。我每次遇到她都会问，你的“big butt”(大屁股)进展得怎么样了。</p><p>像这个国家大多数20来岁、还没有长开的女生，K膀大腰圆，明显的北地特征。每次看到她眉峰下那颗穿皮而过的、两头是小弹珠的镀银钢钉，我就在为那种勇气而汗毛倒竖，她描述穿孔时的那种轻描淡写，跟她激动时对男生说“fuck you”的对骂劲相得益彰。这也归结到她解释自己时最爱用的一句口头禅，“因为我是个女性主义者。”</p><p>我不知道她有没有参与过任何街头抗争，或具体如何表现女权，但在我眼里，她化妆仅是为下课后和几个跟她同样身量的女生去街头找吃，她就是个人畜无害的女学生。</p><p>在这里，我从来不敢说“fat”这个词，因为有一次我在剧本里用了这个形容词，K给我反馈时说，“不要用fat这个词，这会涉嫌歧视”。我不得不臣服，这西方世界里也在瞬息万变的一切，我无法再把自己从三年级开始学的英语带着满世界跑了，我的英语也面临一次灵魂深处的淘洗。</p><p><a class="image" href="https://theinitium.com/article/20220409-strangers-study-screenwriting-in-canada/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/d16db3beae6f48139cd30916b7014d4d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年9月4日，中国北京，人们走过中国电影和电视剧的海报。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
