--- a/_posts/2022-04-10-PQ-從懸崖上跌落的梅克爾歷史定位.html
+++ b/_posts/2022-04-10-PQ-從懸崖上跌落的梅克爾歷史定位.html
@@ -24,7 +24,7 @@ author: 謝時
 </p>
 <p>曾經，拿她與英國已故首相佘契爾夫人（Margaret Thatcher）相比蔚為風潮，因為她和「鐵娘子」的作法大相逕庭。佘契爾夫人無畏面對暴君，而梅克爾卻試圖容納他們，天真地認為經濟繁榮將使俄羅斯和中國擺脫他們的專制政權。</p>
 </p>
-<p>德國人習慣稱呼梅克爾為「Mutti」（媽咪之意），但這種狀況不會再有了。作者強生直言，梅克爾就是那種，當小孩在學校被霸凌、被毆打後不但不去質問老師，還反過來教訓被害者，的媽媽。過去梅克爾的粉絲很愛吹捧她與蒲亭那獨特又坦率的關係，因為她能與這位俄羅斯獨裁者以他的母語暢談。但事實上梅克爾，這位前東德人，根本就害怕這位前 KGB 流氓，而他也嗅出她的恐懼。</p>
+<p>德國人習慣稱呼梅克爾為「Mutti」（媽咪之意），但這種狀況不會再有了。作者強生直言，梅克爾就是那種，當小孩在學校被霸凌、被毆打後，不但不去質問老師還反過來教訓被害者，的那種母親。過去梅克爾的粉絲很愛吹捧她與蒲亭那獨特又坦率的關係，因為她能與這位俄羅斯獨裁者以他的母語暢談。但事實上梅克爾，這位前東德人，根本就害怕這位前 KGB 流氓，而他也嗅出她的恐懼。</p>
 </p>
 <p>打從一開始，這根本就是一個施虐者和被虐者關係。在 2007 年梅克爾受邀到俄羅斯，蒲亭就帶著他的寵物拉布拉多犬到他們的會議地點，而他在之前就知道梅克爾會怕狗。然而她還是隨著蒲亭明目張膽的厭女症起舞，再踩入他為她設下的地緣政治陷阱。</p>
 </p>
